iisnode/EV_INF_DES20-2844-stderr-1440076624333.txt
Application has thrown an uncaught exception and is terminated:
C:\Users\cvilorio\Documents\My Web Sites\NodeJS\quiz\controllers\quiz_controller.js:7
    }).then(
    ^
SyntaxError: Unexpected token }
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at Object.<anonymous> (C:\Users\cvilorio\Documents\My Web Sites\NodeJS\quiz\routes\index.js:4:25)
    at Module._compile (module.js:460:26)
    at Object.Module._extensions..js (module.js:478:10)
